2005-06-28  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/java/nio/DatagramChannelImpl.java
	(getNativeFD): Removed.
	* gnu/java/nio/DatagramChannelSelectionKey.java
	(getNativeFD): Modified to extract the native fd via the
	PlainDatagramSocketImpl.
	* gnu/java/nio/ServerSocketChannelImpl.java
	(getNativeFD): Removed.
	* gnu/java/nio/ServerSocketChannelSelectionKey.java
	(getNativeFD): Modified to extract the native fd via the
	PlainSocketImpl.
	* gnu/java/nio/SocketChannelImpl.java
	(getNativeFD): Removed.
	* gnu/java/nio/SocketChannelSelectionKey.java
	(getNativeFD): Modified to extract the native fd via the
	PlainSocketImpl.

2005-06-28  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
        
        NEWS: Added note about CORBA status in 1.6 release.

2005-06-27  Ziga Mahkovec  <ziga.mahkovec@klika.si>

	* gnu/java/awt/peer/gtk/GdkGraphics2D.java (constructors): Default to
	a transparent background instead of black.
	(drawImage): When drawing a raster, pass live data to avoid copying.
	* gnu/java/awt/peer/gtk/GtkComponentPeer.java (createImage): Return
	a BufferedImage when using Graphics2D.
	* javax/swing/JComponent.java (getComponentGraphics): Avoid copying
	Graphics2D instances.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_copyState): Copy the pixel
	buffer and initialize a new cairo context in MODE_JAVA_ARRAY.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_drawPixels): Revert
	previous transformation patch.

2005-06-27  Ziga Mahkovec  <ziga.mahkovec@klika.si>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_copyState):
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_initState___3III):
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_initState__II):
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_initState__Lgnu_java_awt_peer_gtk_GtkComponentPeer_2):
	Remove gdk_cairo_create calls.
	Obtain dimension for the cairo surface.